--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -14,6 +14,49 @@ body {
 .jumbotron h1 {
   font-family: 'Fredericka the Great', cursive;
   font-size: 75px;
-  color: #ABA46A;
+  color: #557A79;
   text-align: center;
+}
+
+#headerText {
+  text-align: center;
+  font-weight: lighter;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
+
+.btn {
+  color: white;
+  background-color: #0A6865;
+}
+
+.btn:hover {
+  color: white;
+  background-color: #23B5AF;
+}
+
+#homeButton {
+  color: white;
+  background-color: #23B5AF;
+}
+
+#homeButton:hover {
+  color: white;
+  background-color: #0A6865;
+}
+
+#wordList {
+  color: #23B5AF;
+}
+
+#wordListText {
+  color: #0A6865;
+}
+
+#leftCol {
+  padding-right: 30px;
+}
+
+#rightCol {
+  padding-left: 30px;
 }
